# plusnx

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Plusnx.supp  vcpkg-configuration.json  vcpkg.json
src/: CMakeLists.txt  application.cpp  application.h  container.h  context.cpp  context.h  driver.cpp  except.cpp  except.h  main.cpp  runtime_exception.cpp  runtime_exception.h  runtime_plusnx_except.cpp  runtime_plusnx_except.h  types.cpp  types.h
src/armored/: arm64_details.cpp  arm64_details.h  arm64_emitter_context.cpp  arm64_emitter_context.h  arm_types.h  arm_x86_disas.cpp  arm_x86_disas.h  arm_x86_nullable.cpp  armor_types.cpp  code_blocks.cpp  code_blocks.h  cpu_context.cpp  cpu_context.h  emitter_details.cpp  emitter_details.h  emitter_interface.cpp  emitter_interface.h  jit_context.cpp  jit_context.h  readable_text_block.cpp  readable_text_block.h
src/armored/backend/: arm64_emitter_context.cpp  arm64_emitter_context.h  emitter_generator.cpp  emitter_generator.h  emitter_interface.h  x86_64_emitter_context.cpp  x86_64_emitter_context.h
src/armored/frontend/: arm64_disassembler_llvm.cpp  arm64_faster_intrusive_decoder.cpp  arm64_faster_intrusive_decoder.h  arm64_translator.cpp  arm64_translator.h  info_target_instructions.cpp  info_target_instructions.h  mach_arm64_disas.cpp  mach_arm64_disas.h  mach_nullable.cpp
src/armored/ir/: ir_constructor.cpp  ir_constructor.h  ir_descriptor_flow_graph.cpp  ir_descriptor_flow_graph.h  ir_types.cpp  ir_types.h
src/audio/: device.cpp  device.h  input_device.cpp  input_device.h  output_device.cpp  output_device.h  output_devices.cpp  output_devices.h  sound.cpp  sound.h  speaker.cpp  speaker.h
src/core/: application.cpp  application.h  configs.cpp  configs.h  context.cpp  context.h  device_info_submitter.cpp  device_info_submitter.h  games_lists.cpp  games_lists.h  process_qol.cpp  process_qol.h  telemetry_collector.cpp  telemetry_collector.h
src/cpu/: core_blob.cpp  core_blob.h  core_container.cpp  core_container.h  coroutine.cpp  coroutine.h  coroutine_impl.s  features.cpp  features.h  kernel_task.cpp  kernel_task.h  unit_types.h
src/details/: allocators.h  bits.h  perf_measure.cpp  perf_measure.h
src/generic_kernel/: address_space.cpp  address_space.h  constants.h  guest_buffer.cpp  guest_buffer.h  kernel.cpp  kernel.h  memory_nx.cpp  memory_nx.h  os_allocator.cpp  os_allocator.h  sys_memory_pool.cpp  sys_memory_pool.h  tracker.cpp  tracker.h  user_space.cpp  user_space.h
src/generic_kernel/base/: auto_types.h  k_process_handle_table.cpp  k_process_handle_table.h  k_recursive_lock.cpp  k_recursive_lock.h  k_tls_page.cpp  k_tls_page.h  kauto_object.cpp  kauto_object.h
src/generic_kernel/memory/: k_slab_heap.cpp  k_slab_heap.h
src/generic_kernel/svc/: parameter_types.h  svc_process.cpp  svc_process.h  svc_types.h
src/generic_kernel/types/: kprocess.cpp  kprocess.h  kshared_memory.cpp  kshared_memory.h  kthread.cpp  kthread.h
src/graphics/: gpu.cpp  gpu.h
src/graphics/vk/: instance.cpp  instance.h  vulkan_types.h
src/gsk/: kernel.cpp  kernel.h
src/gsk/types/: kprocess.cpp  kprocess.h  kthread.cpp  kthread.h
src/input/: app_controller.cpp  app_controller.h  controller_types.h  sdl_inputs.cpp  sdl_inputs.h  shared_hid_memory.cpp  shared_hid_memory.h
src/kmo/: kernel.cpp  kernel.h
src/kmo/types/: kprocess.cpp  kprocess.h  kthread.cpp  kthread.h
src/loader/: app_loader.cpp  app_loader.h  cartridge.cpp  cartridge.h  content_archive.cpp  content_archive.h  eshop_title.cpp  eshop_title.h  game_fs.cpp  game_fs.h  main_executable.cpp  main_executable.h  nx_executable.cpp  nx_executable.h
src/nogui/: sdl_vulkan_backing.cpp  sdl_vulkan_backing.h  sdl_window.cpp  sdl_window.h
src/nxk/: address_space.cpp  address_space.h  constants.h  kernel.cpp  kernel.h  memory_nx.cpp  memory_nx.h  os_allocator.cpp  os_allocator.h  scheduler_preemptive.cpp  scheduler_preemptive.h  tracker.cpp  tracker.h  user_space.cpp  user_space.h
src/nxk/base/: auto_types.h  k_auto_object.cpp  k_auto_object.h  k_process_handle_table.cpp  k_process_handle_table.h  k_recursive_lock.cpp  k_recursive_lock.h  k_tls_page.cpp  k_tls_page.h  kauto_object.cpp
src/nxk/memory/: k_slab_heap.cpp  k_slab_heap.h
src/nxk/svc/: svc_process.cpp  svc_process.h  svc_types.h
src/nxk/types/: kprocess.cpp  kprocess.h  kshared_memory.cpp  kshared_memory.h  kthread.cpp  kthread.h
src/os/: make_loader.cpp  make_loader.h  nx_sys.cpp  nx_sys.h  process_creator.cpp  process_creator.h
src/os/sdk/: control_property.cpp  control_property.h
src/platform/: hostx1.cpp  hostx1.h  syncpoint_ctl.cpp  syncpoint_ctl.h
src/recompiler/: opcodes.cpp  opcodes.h
src/security/: checksum.cpp  checksum.h  cipher_cast.cpp  cipher_cast.h  key_types.cpp  key_types.h  keyring.cpp  keyring.h  signatures.cpp  signatures.h  ticket.cpp  ticket.h
src/services/settings/: languages.cpp  languages.h
src/sys_fs/: assets.cpp  assets.h  bounded.cpp  bounded.h  continuous_block.cpp  continuous_block.h  ctr_backing.cpp  ctr_backing.h  fs_types.cpp  fs_types.h  layered_fs.cpp  layered_fs.h  meta_program.cpp  meta_program.h  npdm.cpp  npdm.h  provider.cpp  provider.h  streamed_file.cpp  streamed_file.h
src/sys_fs/ext/: fake_romfs.cpp  fake_romfs.h  nso_modules.cpp  nso_modules.h
src/sys_fs/extra/: insertable_romfs.cpp  insertable_romfs.h  nso_modules.cpp  nso_modules.h
src/sys_fs/fsys/: regular_file.cpp  regular_file.h  rigid_directory.cpp  rigid_directory.h
src/sys_fs/nx/: content_archive.cpp  content_archive.h  content_metadata.cpp  content_metadata.h  fake_romfs.cpp  fake_romfs.h  nca_core.cpp  nca_core.h  nso_core.cpp  nso_core.h  partition_filesystem.cpp  partition_filesystem.h  (+4 more)
src/video/: gpu.cpp  gpu.h  graphics_types.h  tegrax1_gpu.cpp  tegrax1_gpu.h
tests/: CMakeLists.txt
tests/armored/: basic_jit_core_append.cpp
tests/coroutines/: main.cpp
tests/details/: statistics.cpp
tests/signatures/: rsassa_pss_list.cpp
tools/: CMakeLists.txt
tools/binary2hex/: main.cpp
tools/encode/: main.cpp
tools/telemetry/: main.cpp
(+21 files in other folders)
