cmake_minimum_required(VERSION 3.29)

include_directories(${CMAKE_CURRENT_SOURCE_DIR})

add_executable(plusnx)
target_sources(plusnx PRIVATE
    audio/output_device.cpp
    audio/output_device.h
    audio/input_device.cpp
    audio/input_device.h
    audio/output_device.cpp
    audio/output_device.h
    audio/device.cpp
    audio/device.h
    audio/sound.cpp
    audio/sound.h
    video/gpu.cpp
    video/gpu.h
    video/vk/api_types.cpp
    video/vk/api_types.h
    video/vk/app_instance.cpp
    video/vk/app_instance.h
    video/vk/graphics_device.cpp
    video/vk/graphics_device.h
    sys_fs/provider.cpp
    sys_fs/provider.h
    sys_fs/assets.cpp
    sys_fs/assets.h
    sys_fs/fs_types.h
    sys_fs/fs_types.cpp
    sys_fs/fsys/rigid_directory.cpp
    sys_fs/fsys/rigid_directory.h
    sys_fs/fsys/regular_file.cpp
    sys_fs/fsys/regular_file.h
    sys_fs/nx/partition_filesystem.cpp
    sys_fs/nx/partition_filesystem.h
    sys_fs/nx/readonly_filesystem.cpp
    sys_fs/nx/readonly_filesystem.h
    sys_fs/layered_fs.cpp
    sys_fs/layered_fs.h
    sys_fs/continuous_block.cpp
    sys_fs/continuous_block.h
    sys_fs/npdm.cpp
    sys_fs/npdm.h
    sys_fs/ctr_backing.cpp
    sys_fs/ctr_backing.h
    sys_fs/nx/content_archive.cpp
    sys_fs/nx/content_archive.h
    sys_fs/nx/content_metadata.cpp
    sys_fs/nx/content_metadata.h
    nogui/sdl_vulkan_backing.cpp
    nogui/sdl_vulkan_backing.h
    core/application.cpp
    core/application.h
    core/context.cpp
    core/context.h
    core/games_lists.cpp
    core/games_lists.h
    core/device_info_submitter.cpp
    core/device_info_submitter.h
    cpu/core_container.cpp
    cpu/core_container.h
    cpu/unit_types.h
    generic_kernel/types/kprocess.cpp
    generic_kernel/types/kprocess.h
    generic_kernel/types/kthread.cpp
    generic_kernel/types/kthread.h
    generic_kernel/kernel.cpp
    generic_kernel/kernel.h
    generic_kernel/user_space.cpp
    generic_kernel/user_space.h
    generic_kernel/address_space.cpp
    generic_kernel/address_space.h
    loader/app_loader.cpp
    loader/app_loader.h
    loader/eshop_title.cpp
    loader/eshop_title.h
    loader/cartridge.cpp
    loader/cartridge.h
    loader/nx_executable.cpp
    loader/nx_executable.h
    loader/game_fs.cpp
    loader/game_fs.h
    os/nx_sys.cpp
    os/nx_sys.h
    os/process_creator.cpp
    os/process_creator.h
    os/sdk/control_property.cpp
    os/sdk/control_property.h
    os/make_loader.cpp
    os/make_loader.h
    services/settings/languages.cpp
    services/settings/languages.h
    security/checksum.cpp
    security/checksum.h
    security/cipher_cast.cpp
    security/cipher_cast.h
    security/key_types.cpp
    security/key_types.h
    security/keyring.cpp
    security/keyring.h
    main.cpp
    driver.cpp
    container.h
    except.h
    types.cpp
    types.h
)

target_link_libraries(plusnx PRIVATE Vulkan::Headers Vulkan::Vulkan SDL2 Boost::align Boost::algorithm Boost::program_options mbedcrypto)
